// Copyright (c) 2024 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package com.digitalasset.canton.protocol.v0;

import "com/digitalasset/canton/crypto/v0/crypto.proto";

// Definitions shared by at least 2 out of mediator.proto, participant_transaction.proto and participant_transfer.proto

enum ViewType {
  MissingViewType = 0;
  TransactionViewType = 1;
  TransferOutViewType = 2;
  TransferInViewType = 3;
}

message GlobalKey {
  bytes template_id = 1;
  bytes key = 2;
}

message DriverContractMetadata {
  crypto.v0.Salt contract_salt = 1;
}
